/* ས་སྐྱོང་མཆོག་དགོངས་ཞུའི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -579,7 +579,8 @@
 བླ་མ་ཁྲི་པ་ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་དགུང་ལོ་བདུན་བཞེས་མི་དང་ སྡེ་སྲིད་མཆོག་དང་རྗོང་དཔོན་ཚུ་གིས་ ངོས་ལེན་གནང་མི་འདི་ཡང་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སོ་བདུན་ (༡༨༣༧) མེ་བྱ་ལོ་ལུ་ རྒྱ་གར་གཞུང་གིས་ ཨ་སམ་དྲུ་ཨརསི་ཚུ རྒྱ་གར་གཞུང་ཁོངས་སུ་བཞག་སྟེ་ ས་རིན་ལོ་བསྟར་ ༡༠,༠༠༠/- རེ་འབྲུག་ལུ་ཕུལ་རྒྱུའི་ཁ་སླབ་པར་ ཀེབ་ཀྲིན་དཔལ་འབར་ཏེན་ དེ་ཝང་གུ་རི་བརྒྱུད་དེ་ འབྲུག་ནང་བཏངམ་ལས་ཨིན། དེ་ལུ་ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ངོས་ལེན་མ་འབད་བར་ དོན་དག་མ་གྲུབ་པར་ལུས་ནུག། ད་རུང་སྡེ་སྲིད་མཆོག་ནི་ ཁྲི་ཐོག་མཛད་པའི་མཐའ་མ་ གཞོང་སྒར་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ གཞུང་ལུ་ངོ་ལོག་གི་དམག་སྤུ་ན་ཁར་ལྷོད་དེ་ ཟླ་དང་པའི་ཚེས་ ༡༥ འི་ནུབ་མོ་ རྗོང་འཕྱོག་ཆིཝ་ལས་ སྡེ་སྲིད་མཆོག་མཁན་ཆེན་གྱི་གཟིམ་ཅུང་ནང་ སྲོག་སྐྱབས་ཞུ་བར་བྱོན་ཏེ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་ ཟུར་བཞུགས་དགོཔ་བྱུང་ནུག། དེ་ཡང་སྤྱི་ལོ་ ༡༨༣༨ ས་ཁྱི་ལོའི་གསོལ་ཐབ་ སྤུ་ན་ཁར་བཞུགསཔ་ཨིན་པས།</big>
 
 === ས་སྐྱོང་མཆོག་དགོངས་ཞུའི་མཛད་པ། ===
-སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་ལུ་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་བདེ་ཏོག་ཏོ་སྦེ་ བདེ་བར་བཏོན་ཡོད་མི་དེ་ཡང་ གཞོང་སྒར་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ སྡེ་ཁྲི་ལས་ཕབ་པའི་ཤུལ་མ་ མཁན་ཆེན་ཉེར་ལྔ་པའི་ཁྲི་ཟུར་ བསྟན་འཛིན་འབྲུག་སྒྲ་སློབ་དཔོན་ཡོན་ཏན་ ཐིམ་ཕུག་རྗོང་དཔོན་ཚུ་གིས་ཁྲི་འདུམ་མཛད་དེ་ སྤུ་ན་ཁའི་རྗོང་གཞིས་དེ་ལྕགས་པ་སངས་རྒྱས་ལུ་རྩིས་སྤྲོད་གནང་ནུག། དེ་ལས་སྡེ་ཟུར་མཆོག་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་ བདེ་བར་བཏོན་པའི་ཤུལ་ མ་དགོན་པར་བྱོན་ཏེ་ ཚེ་མཇུག་བདེ་བར་སྐྱོངསཏེ་བཞུགས་ནུག།
+<big>སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་ལུ་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་བདེ་ཏོག་ཏོ་སྦེ་ བདེ་བར་བཏོན་ཡོད་མི་དེ་ཡང་ གཞོང་སྒར་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ སྡེ་ཁྲི་ལས་ཕབ་པའི་ཤུལ་མ་ མཁན་ཆེན་ཉེར་ལྔ་པའི་ཁྲི་ཟུར་ བསྟན་འཛིན་འབྲུག་སྒྲ་སློབ་དཔོན་ཡོན་ཏན་ ཐིམ་ཕུག་རྗོང་དཔོན་ཚུ་གིས་ཁྲི་འདུམ་མཛད་དེ་ སྤུ་ན་ཁའི་རྗོང་གཞིས་དེ་ལྕགས་པ་སངས་རྒྱས་ལུ་རྩིས་སྤྲོད་གནང་ནུག། དེ་ལས་སྡེ་ཟུར་མཆོག་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་ བདེ་བར་བཏོན་པའི་ཤུལ་ མ་དགོན་པར་བྱོན་ཏེ་ ཚེ་མཇུག་བདེ་བར་སྐྱོངསཏེ་བཞུགས་ནུག།
+</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
