/* ས་སྐྱོང་མཆོག་དགོངས་ཞུའི་མཛད་པ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -582,6 +582,31 @@
 <big>སྡེ་ཟུར་ཆོས་ཀྱི་རྒྱལ་མཚན་ལུ་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་བདེ་ཏོག་ཏོ་སྦེ་ བདེ་བར་བཏོན་ཡོད་མི་དེ་ཡང་ གཞོང་སྒར་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ སྡེ་ཁྲི་ལས་ཕབ་པའི་ཤུལ་མ་ མཁན་ཆེན་ཉེར་ལྔ་པའི་ཁྲི་ཟུར་ བསྟན་འཛིན་འབྲུག་སྒྲ་སློབ་དཔོན་ཡོན་ཏན་ ཐིམ་ཕུག་རྗོང་དཔོན་ཚུ་གིས་ཁྲི་འདུམ་མཛད་དེ་ སྤུ་ན་ཁའི་རྗོང་གཞིས་དེ་ལྕགས་པ་སངས་རྒྱས་ལུ་རྩིས་སྤྲོད་གནང་ནུག། དེ་ལས་སྡེ་ཟུར་མཆོག་ཉེས་སྐྱོན་ག་ནི་ཡང་མ་ཕོག་པར་ བདེ་བར་བཏོན་པའི་ཤུལ་ མ་དགོན་པར་བྱོན་ཏེ་ ཚེ་མཇུག་བདེ་བར་སྐྱོངསཏེ་བཞུགས་ནུག།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་སོ་བརྒྱད་པ་ ས་སྐྱོང་མི་དབང་ཐིམ་རྫོང་པ་བཀྲ་ཤིས་རྡོ་རྗེའི་མཛད་རྣམ། ===
+==== དང་པ་སྡེ་སྲིད་མ་མཛད་གོང་གི་མཛད་རྣམ། ====
+<big>ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་སྟོད་ཝང་དར་ལུང་ཁ་ལུ་སྐུ་འཁྲུངས་ཏེ་ཡོད་མི་ སྡེ་སྲིད་ཁྲི་རབས་སོ་བརྒྱད་པ་ ས་སྐྱོང་མི་དབང་ཐིམ་རྫོང་པ་འདི་ནི་ མཚན་ལུ་ཡང་བཀྲ་ཤིས་རྡོ་རྗེ་ཟེར་གསོལ་གནང་ནུག། ཁོ་ར་ ཧེ་མ་ཆུང་ཀུའི་བསྒང་ལས་ སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་སྒར་ལྟོ་མཛད་ཡོདཔ་མ་ཚད་ ཆོས་རྗེ་འབྲུག་པའི་ལས་ཚན་གྱི་འགན་ཁུར་རིམ་པར་མཐར་འཁྱོལ་ཏེ་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ཐོབ་སྟེ་བཞུགས་ནུག།</big>
+==== གཉིས་པ་སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བསྐོ་བཞག་གི་མཛད་སྒོ། ====
+<big>སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་སུམ་བཅུ་སོ་བརྒྱད་ ༡༨༣༨ པའི་ས་ཁྱི་ཟླ་དང་པའི་ནང་ མི་དབང་སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་མཆོག་ ད་རུང་སྡེ་སྲིད་ཤོ་ཐེངས་གཉིས་པ་ ཁྲི་རབས་སོ་དྲུག་པའི་ཁྲི་ལུ་བཞུགསཔ་ད་ གཞོང་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ གཞུང་ལུ་ངོ་རྒོལ་གྱི་དམག་དཔུང་ སྤུ་ན་ཁར་བཙུགས་ཏེ་ སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་ནི་རྐྱེན་ལུ་ཁྲི་ལས་ཕབས་ཏེ་ རྡོ་རྗེ་ནོར་བུ་འདི་དར་དཀར་དཔོན་སློབ་ཀྱི་ཁྲི་ལུ་བཏོནམ་ད་ སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་གྱི་བློ་ཁར་མ་བབས་པར་ སྤྱི་ལོ་ ༡༨༣༨ ས་ཁྱི་ཟླ་ ༤ པའི་ནང་ ཐིམ་རྫོང་པ་བཀྲ་ཤིས་རྡོ་རྗེ་དེ་ ཐིམ་ཕུག་བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་ སྡེ་སྲིད་སོ་བརྒྱད་པའི་ཁྲི་ལུ་ མངའ་གསོལ་ཞུཝ་ད་ རྗེ་ཤེས་རབ་རྒྱལ་མཚན་ལས་དགེ་ཚུལ་གྱི་སྡོམ་པ་ཡང་ཞུ་ནུག།</big>  
+==== གསུམ་པ་སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་ཤུལ། ==== 
+=====༡. སྡེ་སྲིད་རྣམ་གཉིས་ཟུང་འབྲེལ། =====
+<big>འབྲུག་རྒྱལ་ཁབ་ནང་ སྤྱི་ལོ་ ༡༨༣༨ ལས་ སྡེ་སྲིད་ཁག་གཉིས་ལུ་གནས་ཏེ་ གསོལ་ཐབ་ཕེབས་བཞུགས་ལས་འགོ་བཟུང་སྟེ་ རྒྱལ་སྲིད་ཀྱི་ལཱ་ཚུ་ མཛད་སྟབས་མ་བདེ་བར་བཞུགསཔ་ད་ གྲྭ་ཚང་གི་བླམ་མཁན་པོ་དང་ སྐུ་གཞོགས་བསྟན་འཛིན་འབྲུག་སྒྲ་ཚུ་གིས་ ལོ་ངོ་བཞིའི་རིང་ལོག་སྟེ་ར་ སྤྱི་ལོ་ ༡༨༤༢ ཆུ་སྟག་ལོ་ལས་ཁྲི་འགྲིགས་ཚུགསཔ་ལས་ སྡེ་སྲིད་རྣམ་གཉིས་ ཐུགས་མཐུན་མཉམ་གཅིག་གི་ཐོག་ལས་ སྤྱི་ལོ་ ༡༨༤༨ ཚུན་ལོ་ངོ་ ༦ གི་རིང་ རྒྱལ་སྲིད་མཉམ་རུབ་སྐྱོངས་ཏེ་བཞུགས་ནུག། སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༤༨ ས་སྤྲེལ་ལོ་ལུ་ ཁྲི་ཐོག་གུར་གཤགས་སོངམ་ལས་ དེ་ལས་ཚུར་ སྡེ་སྲིད་བཀྲ་ཤིས་རྡོ་རྗེ་ཁོ་ར་གཅིག་གིས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་ སྤྱི་ལོ་ ༡༨༥༠ ཚུན་ལོ་ངོ་ ༢ ཀྱི་རིང་ རྒྱལ་སྲིད་སྐྱོངས་ཏེ་བཞུགས་ནུག།</big> 
+=====༢. རྗེ་མཁན་ཁྲི་རབས་ ༢༩ པའི་ཁྲི་མངའ་གསོལ། ===== 
+<big>རྗེ་མཁན་ཁྲི་རབས་ ༢༨ པ་ངག་དབང་རིན་ཆེན་བཟང་པོ་མཆོག་ སྤྱི་ལོ་ ༡༨༤༨ ལུ་ རྗེའི་ཁྲི་ཐོག་ལས་ དགོངས་པ་རྫོགས་སོངམ་ལས་ སྤྱི་ལོ་ ༡༨༤༨ ལུ་རྗེ་ཁྲི་ཟུར་པདྨ་བཟང་པོ་མཆོག་ནི་ ལོག་སྟེ་ར་རྗེ་མཁན་ཁྲི་རབས་ ༢༩ པའི་ཆོས་ཀྱི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big> 
+===== ༣. སྟོན་པ་ཐུབ་པའི་དབང་པོའི་སྐུ་བརྙན། ===== 
+<big>གདན་ས་སྤུ་ན་ཁ་རྫོང་གི་ནང་རྟེན་དུ་ སྟོན་པ་ཐུབ་པའི་དབང་པོའི་སྐུ་བརྙན་ཆེན་པོ་འགྲན་ཟླ་དང་བྲལ་བ་ གསར་དུ་བཞེངས་ནུག། དེ་སྐབས་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་ལས་ཀྱང་ ཞལ་འདེབས་ཚུ་ཕུལ་གནང་ནུག།</big>
+===== ༤. བསྟན་སྤྱིའི་སྐུ་རིམ། ===== 
+<big>སྡེ་སྲིད་བཀྲ་ཤིས་རྡོ་རྗེ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༨༤༧ མེ་སྟག་ཟླ་ ༥ པའི་ནང་ བསྟན་སྤྱིའི་སྐུ་རིམ་དོན་དུ་ ལྷ་མགོན་གྱི་སྲིད་པ་སྤྱི་མདོས་སྐུ་རིམ་བསྒྲུབས་གནང་ནུག།</big> 
+===== ༥. ཆབ་འབངས་མི་སེར་ཡོངས་ལུ་གནང་སྦྱིན། ===== 
+<big>སྡེ་སྲིད་བཀྲ་ཤིས་རྡོ་རྗེ་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༤༨ ས་སྤྲེལ་ལོར་ སྐུ་གཤེགས་པ་ནས་ འབྲུག་གི་སྡེ་སྲིད་དབང་ཚད་ ཧྲིལ་བུམ་ཕྱག་ལུ་ཐེབས་པའི་དགའ་སྟོན་ལུ་ ཁ་བཞིའི་ཆབ་འབངས་མི་སེར་ཡོངས་ལུ་ སྡེ་སྲིད་བཀྲ་ཤིས་རྡོ་རྗེ་མཆོག་གིས་ རྒྱལ་ཡོངས་གནང་སྦྱིན་གནང་ནུག།</big> 
+===== ༦. འཆམ་རོལ་བཀྲ་ཤིས་རྡོ་རྗེ། ===== 
+<big>དགེ་འདུན་གྲྭ་ཚང་འདུས་དེར་ ཧེ་མ་ལས་མེད་མི་ འགྲན་ཟླ་དང་འབྲལ་བའི་རོལ་མོ་སྤོ་གསང་གསར་དུ་བསྒྲུབས་ཏེ་ཕུལ་མི་ དེ་ལུ་ འཆམ་རོལ་བཀྲ་ཤིས་རྡོ་རྗེ་ཟེར་མི་ ད་ལྟོ་བར་ན་ཡོངས་གྲགས་ཀྱི་སྙན་གྲགས་སྦེ་ཡོདཔ་ཨིན་པས།</big> 
+===== ༧. སྤུངས་རྫོང་མེ་འཇིགས་ཐེངས་ལྔ་པའི་ཉམས་གསོ། ===== 
+<big>སྤུངས་རྫོང་མེ་འཇིགས་ཐེངས་ལྔ་པ་ནི་ སྤྱི་ལོ་ ༡༨༤༩ ས་བྱ་ཟླ་ ༨ ཚེས་ ༢༣ ལུ་བྱུང་སྟེ་ རྒྱལ་བློན་ག་ར་སྡུག་བསྔལ་དཔག་ཏུ་མེདཔ་འབྱུང་རུང་ གོང་ས་བཀྲ་ཤིས་རྡོ་རྗེ་གིས་བརྩོན་ཤུགས་སྦོམ་མཛད་དེ་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་ཕྱོགས་སྤྲུལ་འཇིགས་མེད་རྡོ་རྗེ་ ཁྲི་སྤྲུལ་ངག་དབང་ཕྲིན་ལས་རྒྱ་མཚོ་ བྱམས་སྤྲུལ་བདུད་འཇོམས་རྒྱལ་མཚན་ མཁན་ཆེན་པདྨ་བཟང་པོ་བཅས་ཞལ་འཛོམས་ཐོག་ལས་ ལོ་འཁོར་ལུ་ཕྱི་གཟུགས་བསྒྲུབས་པའི་རབ་གནས་ཡང་གནང་ནུག།</big>
+===== ༨. མཁན་ཆེན་ཁྲི་རབས་ ༣༠ པའི་ཁྲི་མངའ་གསོལ། ===== 
+<big>མཁན་རབས་ཉེར་དགུ་པ་རྗེ་པདྨ་བཟང་པོ་མཆོག་ནི་ སྤྱི་ལོ་ ༡༨༥༠ ལྕགས་ཁྱི་ཟླ་ ༣ པའི་ཚེས་ ༢༣ ལུ་ཁྲི་ཐོག་ལུ་གཤགས་སོངམ་ལས་ དགེ་འདུན་གསོལ་ཐབ་ཐིམ་ཕུག་ཕེབས་ཅིག་ མཁན་རབས་སུམ་ཅུ་པའི་ཆོས་ཀྱི་ཁྲི་ཐོག་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུའི་ཡོངས་འཛིན་ ངག་དབང་འཇམ་དཔལ་རྒྱ་མཚོ་ ཁྲི་མངའ་གསོལ་ཞུ་ནུག།</big> 
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ==== 
+<big>སྤྱི་ལོ་ ༡༨༥༠ ལྕགས་ཁྱི་ལོའི་གསོལ་ཐབ་ཐིམ་ཕུག་ཕེབས་པའི་ཤུལ་ལས་ སྐུ་གཟུགས་གནོད་འཚེ་ཅན་ཅིག་ཐོབ་པ་ལས་བརྟེན་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་སྲིད་ཁྲི་ཐོག་ལས་དགོངས་ཞུས་མཛད་དེ་ ཟླཝ་མ་འཁོརཝ་ལས་ ལྕགས་ཁྱི་ཟླ་ ༤ ཚེས་ ༢༩ ལུ་དགོངསམ་རྫོགསཔ་ད་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་ཞུ་སྟེ་ ལམ་སྟོན་སྤུར་སྦྱང་ཚུ་གནང་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
