--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -607,6 +607,17 @@
 ==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ==== 
 <big>སྤྱི་ལོ་ ༡༨༥༠ ལྕགས་ཁྱི་ལོའི་གསོལ་ཐབ་ཐིམ་ཕུག་ཕེབས་པའི་ཤུལ་ལས་ སྐུ་གཟུགས་གནོད་འཚེ་ཅན་ཅིག་ཐོབ་པ་ལས་བརྟེན་ སྐུ་གཟུགས་མ་བདེ་བར་ སྡེ་སྲིད་ཁྲི་ཐོག་ལས་དགོངས་ཞུས་མཛད་དེ་ ཟླཝ་མ་འཁོརཝ་ལས་ ལྕགས་ཁྱི་ཟླ་ ༤ ཚེས་ ༢༩ ལུ་དགོངསམ་རྫོགསཔ་ད་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་ཞུ་སྟེ་ ལམ་སྟོན་སྤུར་སྦྱང་ཚུ་གནང་ནུག།</big>
 
+=== ས་སྐྱོང་མི་དབང་འབྲུག་སྡེ་སྲིད་ཁྲི་རབས་སོ་དགུ་པ་ ཐིམ་རྫོང་པ་དབང་ཕྱུག་རྒྱལ་པོའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་མ་མཛད་གོང་གི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་སོ་དགུ་པ་དབང་ཕྱུག་རྒྱལ་པོ་ནི་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཡ་གྱལ་ལུ་ཡོད་པའི་ སྨད་ཝང་ཁོངས་གཏོགས་མཁར་སྦིས་ལས་སྐུ་འཁྲུངས་ནི་འདི་གི་ མཚན་ཡང་དབང་ཕྱུག་རྒྱལ་པོ་ཟེར་གསོལ་གནང་ནུག།<br>
+སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ གཞུང་སྤུངས་ཐང་བདེ་བ་ཆེན་པའི་ཕོ་བྲང་ནང་ལུ་ དགེ་འདུན་འདུས་པའི་སྡེ་ལུ་ཞུགས་ཏེ་ ཆོས་རྗེ་འབྲུག་པའི་སྒྲིག་ལམ་རྣམ་གཞག་དང་ འབྲི་ཀློག་གི་ཡོན་ཏན་ཚུ་ཡོངས་རྫོགས་སྦེ་སྦྱངས་བརྩོན་མཛད་གནང་ནུག། ཤུལ་མ་ལས་ཀྱི་བཀོདཔ་ལས་བརྟེན་ཏེ་ རྫོང་གོང་མའི་སྲིད་ཀྱི་ལས་ཚན་ནང་བཅའ་མར་གཏོགས་ཏེ་ ཐིམ་ཕུག་ལུ་གཉེར་ཆེན་གྱི་འགན་ཁུར་བཞེས་ཏེ་མཐར་མཁྱོལ་བྱུངམ་ལས་ ཐིམ་ཕུག་ལུ་བཀྲིས་ཆོས་རྫོང་གི་ རྫོང་དཔོན་གྱི་བདག་རྐྱེན་བཞེས་ཏེ་མཛད་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་དུས་སྟབས་ཀྱི་རྟེན་འབྲེལ། ====
+<br>
+སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ལྔབཅུ་ (༡༨༥༠) ལྕགས་ཁྱི་ལོའི་གཞུང་གྲྭ་ཚང་གསོལ་ཐབ་ཐིམ་ཕུག་བཀྲིས་ཆོས་རྫོང་ནང་ཕེབས་ཞིནམ་ལས་ མི་དབང་འབྲུག་སྡེ་སྲིད་བཀྲིས་རྡོ་རྗེ་ ཤུགས་སྦེ་སྐུ་བསྙུངསམ་ལས་བརྟེན་ སྡེ་སྲིད་ཁྲི་ཟུར་ལས་དགོངས་ཞུ་སྦེ་དགོཔ་ཐོནམ་ལས་བརྟེན་ སྤྱི་ལོ་ཆིག་སྟོང་བརྒྱད་བརྒྱ་ལྔབཅུ་ (༡༨༥༠) འམ་རང་ལུགས་འདས་ལོ་ཉིས་བརྒྱ་དང་ རབ་བྱུང་བཅུ་བཞི་པའི་ལྕགས་ཁྱི་ཟླ་ ༥ པའི་ནང་ གཞུང་ལྷན་རྒྱས་ཀྱི་འགོ་འདྲེན་ཐོག་ལས་ ཐིམ་ཕུག་རྫོང་དཔོན་དབང་ཕྱུག་རྒྱལ་པོ་འདི་ སྡེ་སྲིད་ཁྲི་རབས་སོ་དགུ་པའི་ཁྲི་ལུ་ མངའ་གསོལ་ཞུ་ནུག།
+==== སྡེ་སྲིད་ཁྲི་ཐོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>དེ་བསྒང་ འབྲུག་སྡེ་སྲིད་ཞབས་སུ་ སྤ་གྲོ་དཔོན་སློབ་བགྲེས་པ་ ཚུལ་ཁྲིམས་རྣམ་རྒྱལ་ཨ་རྒས་ཧཱ་པ་དང་ དཔོན་སློབ་ཁྲི་པ་ཡོན་ཏན་རིན་ཆེན་ནམ་སྟག་གཟིག་སྒྲོལ་མ་གཉིས་མ་འགྲིགས་པར་འཁོན་འགྲེས་སྦོམ་ཞུགས་པའི་རྩོད་གཞི་གུར་ཐུགཔ་ད་ སྡེ་སྲིད་མཆོག་གིས་ དཔོན་སློབ་ཁྲི་པའི་རེ་བ་དང་འདོད་པ་བཞིན་དུ་ གྲོས་ཆོད་བཏོན་གནང་ཡོདཔ་ཨིན་མས། <br>
+འབྲུག་སྡེ་སྲིད་དབང་ཕྱུག་རྒྱལ་པོ་ནི་ ཁྲི་ཁར་ཟླཝ་གསུམ་ཡང་མ་སོངམ་ལས་ དཔོན་སློབ་ཨ་རྒས་ཧཱ་པ་དང་ ཐིམ་ཕུག་རྫོང་དཔོན་ཚ་ཕུགཔ་ཚེ་དབང་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུའི་བླ་གཟིམ་བསོད་ནམས་དོན་གྲུབ་ཚུ་ བསམ་ཕྱོགས་མཐུན་པའི་ཐོགས་ལས་ཐིམ་ཕུག་རྫོང་དཔོན་དང་བླ་གཟིམ་གཉིས་ཀྱིས་ བཀྲོང་དཔ་ལས་ སྡེ་སྲིད་དབང་ཕྱུག་རྒྱལ་པོ་གིས་ དཔལ་ལྡན་འབྲུག་པའི་ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་ བསྟན་པའི་ཞབས་ཏོག་ཡང་ ག་ནི་ཡང་ཞུ་ནི་ལུ་ གོ་སྐབས་བྱུང་མ་ཚུགསཔ་ཨིན་པས།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
