--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -618,6 +618,21 @@
 <big>དེ་བསྒང་ འབྲུག་སྡེ་སྲིད་ཞབས་སུ་ སྤ་གྲོ་དཔོན་སློབ་བགྲེས་པ་ ཚུལ་ཁྲིམས་རྣམ་རྒྱལ་ཨ་རྒས་ཧཱ་པ་དང་ དཔོན་སློབ་ཁྲི་པ་ཡོན་ཏན་རིན་ཆེན་ནམ་སྟག་གཟིག་སྒྲོལ་མ་གཉིས་མ་འགྲིགས་པར་འཁོན་འགྲེས་སྦོམ་ཞུགས་པའི་རྩོད་གཞི་གུར་ཐུགཔ་ད་ སྡེ་སྲིད་མཆོག་གིས་ དཔོན་སློབ་ཁྲི་པའི་རེ་བ་དང་འདོད་པ་བཞིན་དུ་ གྲོས་ཆོད་བཏོན་གནང་ཡོདཔ་ཨིན་མས། <br>
 འབྲུག་སྡེ་སྲིད་དབང་ཕྱུག་རྒྱལ་པོ་ནི་ ཁྲི་ཁར་ཟླཝ་གསུམ་ཡང་མ་སོངམ་ལས་ དཔོན་སློབ་ཨ་རྒས་ཧཱ་པ་དང་ ཐིམ་ཕུག་རྫོང་དཔོན་ཚ་ཕུགཔ་ཚེ་དབང་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུའི་བླ་གཟིམ་བསོད་ནམས་དོན་གྲུབ་ཚུ་ བསམ་ཕྱོགས་མཐུན་པའི་ཐོགས་ལས་ཐིམ་ཕུག་རྫོང་དཔོན་དང་བླ་གཟིམ་གཉིས་ཀྱིས་ བཀྲོང་དཔ་ལས་ སྡེ་སྲིད་དབང་ཕྱུག་རྒྱལ་པོ་གིས་ དཔལ་ལྡན་འབྲུག་པའི་ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་ བསྟན་པའི་ཞབས་ཏོག་ཡང་ ག་ནི་ཡང་ཞུ་ནི་ལུ་ གོ་སྐབས་བྱུང་མ་ཚུགསཔ་ཨིན་པས།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་པ་ས་སྐྱོང་མི་དབང་ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་མཆོག་ རབ་བྱུང་བཅུ་བཞི་པའི་སྤྱི་ལོ་ ༡༨༣༡ ལྕགས་ཡོས་ཟླཝ་ ༦ པའི་ཚེས་ ༡༨ ལུ་ ཡབ་བསྟན་འཛིན་ཆོས་རྒྱལ་དང་ ཡུམ་འབྲུག་རྒྱལ་མོ་གཉིས་ཀྱི་སྲས་ལུ་ ཤར་ཕྱོགས་དགྲ་མེད་རྩེ་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་པདྨ་དབང་གྲགས་ཟེར་གསོལ་ནུག། དགུང་ལོ་ཆུང་ཀུའི་བསྒང་ལས་ སྐུ་གོང་མའི་ཡང་སྲིད་འཁྲུལ་མེད་ཀྱི་མངོན་ཤེས་མཁྱེན་ཏེ་ སྤྱི་ལོ་ ༡༨༣༤ ཤིང་རྟ་གི་ལོ་ལུ་ སྤུ་ན་ཁ་ལུ་ཕེབས་ནུག། དེ་ལས་ སྡེ་སྲིད་མཆོག་གི་གདན་ས་ཡང་སྤུ་ན་ཁ་ལུ་གདན་དྲངས་ཏེ་ སྡེ་སྲིད་ཁྲི་རབས་ ༣༣ པ་ཨ་ཐངཔ་ཕྲིན་ལས་དང་ རྗེ་མཁན་ཁྲི་རབས་ ༢༤ པ་ཤཱཀྱ་རྒྱལ་མཚན་གཉིས་ཀྱིས་སྦེ་ བླམ་ཁྲི་པའི་གསེར་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་བའི་ཁར་ མཚན་ཡང་ངག་དབང་འཇིགས་མེད་ནོར་བུ་ཟེར་གསོལ་ནུག། སྡེ་སྲིད་མཆོག་ལུ་ དབང་ལུང་ཁྲིད་གསུམ་གྱི་གདམས་ངག་དང་ དགེ་བསྙེན་དང་དགེ་ཚུལ་ རབ་བྱུང་གི་སྡོམ་པ་ཚུ་ཡང་ རྗེ་མཁན་ཁྲི་རབས་ ༢༥ པ་ ཤེས་རབ་རྒྱལ་མཚན་ལས་ཞུ་སྟེ་  རྗེ་འཇམ་དཔལ་རྒྱ་མཚོ་དང་ ཡོན་ཏན་རྒྱལ་མཚན་གཉིས་ཡོངས་འཛིན་སྦེ་བསྟེན་ཏེ་ སྐུ་ཡོན་ཚུ་བཞེས་གནང་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༣༨ ལུ་ སྤུ་ན་ཁ་ལས་སྡེ་སྲིད་རྡོ་རྗེ་ནོར་བུ་དང་ ཐིམ་ཕུག་ལས་སྡེ་སྲིད་བཀྲ་ཤིས་རྡོ་རྗེ་གཉིས་ཀྱི་བར་ན་ འཛིང་འཁྲུག་བྱུང་ཡོདཔ་ལས་ ཞབས་དྲུང་གི་ཡབ་བསྟན་འཛིན་ཆོས་རྒྱལ་གྱིས་ ནང་ཁ་འགྲིག་པར་བྱོན་པའི་མཐའ་མར་ སྡེ་སྲིད་མཆོག་གི་ཡང་སྲིད་བཞི་པ་འཇིགས་མེད་རྡོ་རྗེ་བླམ་ཁྲི་པ་སྦེ་མངའ་གསོལ་ནུག། སྤྱི་ལོ་ ༡༨༤༥ ལུ་སྡེ་སྲིད་རྣམ་གཉིས་དང་མཆོག་སྤྲུལ་རྣམ་པ་གཉིས་ཀྱི་དམ་བཅའ་ཞུཝ་ལས་ སྤུ་ན་ཁ་དང་ཐིམ་ཕུག་ལུ་འགྲོ་དོན་མཛད་དེ་བཞུགས་ཡོདཔ་དང་ མང་ཆེ་ཤོས་ར་ལྕགས་རི་དང་གསང་གླིང་ལུ་ཐུགས་དམ་གནང་སྟེ་བཞུགས་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༥༠ ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་དང་ བླ་གཟིམ་བསོད་ནམས་དོན་གྲུབ་གཉིས་ཀྱིས་ སྡེ་སྲིད་ཁྲི་རབས་ ༣༩ པ་དབང་ཕྱུག་རྒྱལ་པོ་བཀྲོངས་པའི་ཤུལ་ལས་ སྤྱི་ལོ་ ༡༨༥༠ ཟླཝ་ ༨ པའི་ནང་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་པ་སྦེ་ཁྲི་མངའ་གསོལ་ཞུ་ནུག།</big>
+
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྤུ་ན་ཁ་ལུ་ སྤུངས་རྫོང་དང་དབང་རྫོང་ དར་དཀར་དཔོན་སློབ་གསུམ་གི་རྒྱབ་སྐྱོར་ཐོག་ལས་ དབང་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་འདི་རང་ཐག་རང་བཅད་སྦེ་ སྡེ་སྲིད་བཞི་བཅུ་ཞེ་གཅིག་སྦེ་གསོལ་གནང་ནུག། དེ་གིས་སྦེ་ ནང་འཁྲུག་ལངས་ཏེ་ ཨ་རྒས་ཧཱཔ་གིས་ལྕགས་པ་སངས་རྒྱས་བཀྲོངས་ནི་སྦེ་ དམག་རྒྱབ་ཀྲོང་གསར་དཔོན་སློབ་མཚོ་སྐྱིད་རྡོ་རྗེ་ལས་ཞུ་རུང་ ལྕགས་པ་སངས་རྒྱས་ལུ་གླགས་འཁེལ་མ་ཚུགས་པར་ མཇུག་ལུ་ཨ་རྒས་ཧཱཔ་གི་གཡོ་འཕྲུལ་རྐྱབ་སྟེ་ ན་བཟའ་འབྲུམ་ནད་ཅན་ཅིག་ཕུལཝ་ལས་བརྟེན་ སྤྱི་ལོ་ ༡༨༥༡ ལྕགས་ཕག་ཟླཝ་ ༡ པའི་ཚེས་ ༧ ལུ་ནད་ཐེབས་ཏེ་ཚེ་ལས་འདས་སོ་ནུག། དེའི་སྐབས་ལུ་ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་ཡང་ འབྲུམ་ནད་ཀྱིས་བཤེད་རུང་ཟླཝ་ ༡ དེམ་ཅིག་ཁར་སངས་ཡོདཔ་དང་ ཁྲི་སྤྲུལ་བཞི་པ་ངག་དབང་ཕྲིན་ལས་རྒྱ་མཚོ་སྐུ་མྱ་ངན་ལས་འདས་ཏེ་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་ ཆོས་སྲིད་ཀྱི་དབུ་ཁྲིད་མཛད་དེ་བཞུགས་ནུག།<br>
+ལྷ་དང་བླ་མའི་ལུང་བསྟན་བཞིན་ སྡེ་སྲིད་མཆོག་གིས་ ཨ་ཐང་ནང་ལས་ཕྱག་རྒྱ་མ་བདེ་ཆེན་མཚོ་མོ་བཞེས་ཏེ་ རྩ་རླུང་གི་སྒྲུབ་པ་ཐོབ་ཡོདཔ་ལས་རྟོགས་ལྡན་པའི་ཆས་ལུ་བཞུགས་པའི་སྐབས་ལུ་ མཁན་རབས་ ༣༡ པ་རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་དང་གཞུང་གྲྭ་ཚང་བླ་སློབ་ཚུ་གི་ཐུགས་ཁར་མ་བབས་ལས་ སྤྱི་ལོ་ ༡༨༥༡ ཟླཝ་ ༡༢ ཚེས་ ༧ ལུ་ སྡེ་སྲིད་འཇིགས་མེད་ནོར་བུ་མཆོག་གིས་རྡོ་རྗེ་སློབ་དཔོན་བགྲེསཔ་ བར་ཅུང་པ་འདི་སྡེ་སྲིད་ཀྱི་ཁྲི་གུར་བསྐོས་གནང་ནུག། ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་དགུང་ལོ་ ༣༣ བཞེས་པའི་སྐབས་ལུ་ བླམ་ཁྲིཔ་དང་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ འཇམ་མགོན་སྤྲུལ་སྐུ་མཆོག་ གསེར་ཁྲི་གུར་མངའ་གསོལ་ཞུ་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༥༣ ལུ་ སྡེ་སྲིད་མཆོག་རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་བཞུགས་པའི་སྐབས་ བླ་མའི་གདན་ས་སྒོ་རི་ནང་ ཀུན་སྣང་འོད་གསལ་དགོན་པར་བྱོན་ཏེ་ ཁྲིད་ཐེངས་གཅིག་གནང་ཡོདཔ་དང་ སྤ་གྲོའི་གཙོས་སའི་གནས་ཚུ་གཟིགས་ཏེ་ གདུལ་བྱའི་འགྲོ་དོན་མང་རབས་ཅིག་མཛད་གནང་ནུག། དེ་ལས་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་སྤ་རོ་སྒོ་རི་ནང་བཞུགསཔ་ད་ དགེ་སློང་ ༡༥ གིས་མཚན་འཛིན་བཏོགས་ཏེ་བཏང་ཡོདཔ་མ་ཚད་ ཐོབ་ལམ་ཚུ་ཡང་མེདཔ་བཟོཝ་ལས་ སྤྱི་ལོ་ ༡༨༥༩ ལུ་ སྡེ་སྲིད་མཆོག་སྒོ་རི་ནང་ཡང་མ་བཞུགས་པར་ བོད་ཡུལ་ལུ་གནས་གཟིགས་པར་ཕེབས་ཏེ་ ཡུན་རིངམོ་སྦེ་བཞུགས་ནུག།<br>
+ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་བོད་ལུ་ཕེབས་ད་ སྐྱབས་མགོན་སྐུ་འཕྲེང་ ༡༢ པ་ཕྲིན་ལས་རྒྱ་མཚོ་ སྐུ་ན་མ་སྨིན་པ་ལས་ར་ སྒྲེང་ངག་དབང་ཡེ་ཤེས་ཚུལ་ཁྲིམས་ཀྱིས་ཞབས་དྲུང་མཆོག་ལུ་ དད་པ་དང་ཡིད་ཆེས་ཡོད་པའི་ཁར་བརྩི་བཀུར་ཞུ་སྟེ་ ལོ་གཉིས་ཀྱི་རིང་ལུ་ ཚེ་སྨོན་གླིང་གི་ཕོ་བྲང་ནང་བཞུགས་བཅུག་ནུག།<br>
+ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་བོད་ལུ་བཞུགས་པའི་སྐབས་ལུ་ ཨ་རྒས་ཧཱཔ་གི་ཕྱག་ཞུ་སྟེ་སྡོད་པའི་ཁར་ ཞབས་དྲུང་མཆོག་དྲོ་པ་གི་གསོལ་ཇ་བཞེས་ས་ལུ་ གསོལ་རྩམ་ཨ་ཁམ་གྱིས་སྤུ་ན་ཁ་རྫོང་གི་གཟུགས་བརྙན་ཅིག་བཟོ་ཡོད་པའི་གུར་ གསོལ་ཇ་བླུག་ནི་འབདཝ་ད་ ཨ་རྒས་ཧཱཔ་གི་བླུག་མ་གནང་ཟེར་ཞུཝ་ད་ བླ་མ་གིས་ཐུགས་སྨོན་གནང་ཚར་ཡི་ཟེར་གསུངས་ཏེ་ ཨ་ཙི་ཅིག་བླུགས་གནངམ་ད་ སྤུ་ན་ཁ་ལུ་ཆུ་རུད་ཐོན་འོངམ་ལས་ ཕྱག་མཛོད་ཁ་ཐུག་གི་རྫོང་གཞིས་ཕྱེད་ཀ་འདི་ ཆུ་རུད་ཀྱིས་འབག་ཡོདཔ་ཨིན་པས།<br>
+བོད་ལས་སྤྱི་ལོ་ ༡༨༦༠ ལུ་ལོག་སྟེ་འབྲུག་སྤ་རོ་སྒོ་རི་ནང་བྱོན་ཏེ་བཞུགས་པའི་སྐབས་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་དགུང་ལོ་ ༣༡ བཞེས་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༨༦༡ ལྕགས་བྱ་ལུ་དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག། བླ་མའི་ཕྱག་རྒྱ་མ་ ཨ་ཐང་ལུ་བཞུགས་ཡོད་མི་ མཁའ་འགྲོ་བདེ་ཆེན་མཚོ་མོ་ལུ་སྲསམོ་རིན་ཆེན་མཚོ་མོ་ཟེར་མི་སྐུ་འཁྲུངས་ཏེ་ བརྒྱུད་པའི་རིགས་ལུ་ ཨ་ཐང་གསང་མོ་ཟེར་བའི་ཐ་སྙད་དེ་དར་ཁྱབ་སོང་སྟེ་ཡོདཔ་ཨིན།།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
