/* སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -632,6 +632,15 @@
 ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་བོད་ལུ་ཕེབས་ད་ སྐྱབས་མགོན་སྐུ་འཕྲེང་ ༡༢ པ་ཕྲིན་ལས་རྒྱ་མཚོ་ སྐུ་ན་མ་སྨིན་པ་ལས་ར་ སྒྲེང་ངག་དབང་ཡེ་ཤེས་ཚུལ་ཁྲིམས་ཀྱིས་ཞབས་དྲུང་མཆོག་ལུ་ དད་པ་དང་ཡིད་ཆེས་ཡོད་པའི་ཁར་བརྩི་བཀུར་ཞུ་སྟེ་ ལོ་གཉིས་ཀྱི་རིང་ལུ་ ཚེ་སྨོན་གླིང་གི་ཕོ་བྲང་ནང་བཞུགས་བཅུག་ནུག།<br>
 ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་བོད་ལུ་བཞུགས་པའི་སྐབས་ལུ་ ཨ་རྒས་ཧཱཔ་གི་ཕྱག་ཞུ་སྟེ་སྡོད་པའི་ཁར་ ཞབས་དྲུང་མཆོག་དྲོ་པ་གི་གསོལ་ཇ་བཞེས་ས་ལུ་ གསོལ་རྩམ་ཨ་ཁམ་གྱིས་སྤུ་ན་ཁ་རྫོང་གི་གཟུགས་བརྙན་ཅིག་བཟོ་ཡོད་པའི་གུར་ གསོལ་ཇ་བླུག་ནི་འབདཝ་ད་ ཨ་རྒས་ཧཱཔ་གི་བླུག་མ་གནང་ཟེར་ཞུཝ་ད་ བླ་མ་གིས་ཐུགས་སྨོན་གནང་ཚར་ཡི་ཟེར་གསུངས་ཏེ་ ཨ་ཙི་ཅིག་བླུགས་གནངམ་ད་ སྤུ་ན་ཁ་ལུ་ཆུ་རུད་ཐོན་འོངམ་ལས་ ཕྱག་མཛོད་ཁ་ཐུག་གི་རྫོང་གཞིས་ཕྱེད་ཀ་འདི་ ཆུ་རུད་ཀྱིས་འབག་ཡོདཔ་ཨིན་པས།<br>
 བོད་ལས་སྤྱི་ལོ་ ༡༨༦༠ ལུ་ལོག་སྟེ་འབྲུག་སྤ་རོ་སྒོ་རི་ནང་བྱོན་ཏེ་བཞུགས་པའི་སྐབས་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་དགུང་ལོ་ ༣༡ བཞེས་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༨༦༡ ལྕགས་བྱ་ལུ་དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག། བླ་མའི་ཕྱག་རྒྱ་མ་ ཨ་ཐང་ལུ་བཞུགས་ཡོད་མི་ མཁའ་འགྲོ་བདེ་ཆེན་མཚོ་མོ་ལུ་སྲསམོ་རིན་ཆེན་མཚོ་མོ་ཟེར་མི་སྐུ་འཁྲུངས་ཏེ་ བརྒྱུད་པའི་རིགས་ལུ་ ཨ་ཐང་གསང་མོ་ཟེར་བའི་ཐ་སྙད་དེ་དར་ཁྱབ་སོང་སྟེ་ཡོདཔ་ཨིན།།</big>
+ 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་ཞེ་གཅིག་པ་ས་སྐྱོང་མི་དབང་ལྕགས་པ་སངས་རྒྱས་ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་པ། ====
+<big>ས་སྐྱོང་མི་དབང་ལྕགས་པ་སངས་རྒྱས་མཆོག་ སྨད་ཝང་སི་ལི་ཁ་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་ དར་དཀར་དཔོན་སློབ་རྡོ་རྗེ་ནོར་བུ་གི་ནུ་གཅུང་ཨིན་མས། སྡེ་སྲིད་རྡོ་རྗེ་རྣམ་རྒྱལ་མཆོག་ དགེ་འདུན་གྲྭ་ཚང་ནང་ སྒར་ལྟོ་སྦེ་འཛུལ་ཏེ་ ཆོས་རྗེ་འབྲུག་པའི་ལམ་སྲོལ་དང་སྒྲིག་ལམ་རྣམ་གཞག་ཚུ་གི་སྦྱང་བ་ཚུ་ཡང་ མཐར་ཕྱིནམ་སྦེ་ཐོབ་པའི་ཤུལ་མ་ གོ་གནས་ཚུརིམ་པ་བཞིན་དུ་ཡར་སེང་ཐོབ་ལས་ གཞོང་སྒར་རྫོང་དཔོན་གྱི་གོ་གནས་བཞེས་ནུག། སྤྱི་ལོ་ ༡༨༣༨ གི་ལོ་ལུ་ འབྲུག་ལུ་ངོ་ལོག་གི་དམག་ཐོན་ནུག། དེ་ཡང་ ཐིམ་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་དང་ དར་དཀར་དཔོན་སློབ་རྡོ་རྗེ་ནོར་བུ་གཉིས་ཀྱི་སྒར་པ་ཚུ་ རང་ལུགས་གནམ་ལོ་ས་ཁྱི་ཟླཝ་ ༡ པའི་ཚེས་ ༡༥ ལས་འགོ་བཙུགས་ཏེ་ སྤུ་ན་ཁ་རྫོང་གི་ཕྱོགས་ག་ར་ གསང་བའི་ཐོག་ལས་སྤུངས་ཡོདཔ་དང་ དཔོན་སློབ་རྡོ་རྗེ་ནོར་བུ་དང་རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་གཉིས་ ཁ་བསྡོམས་ཞིནམ་ལས་ སྡེ་སྲིད་ཆོས་ཀྱི་རྒྱལ་མཚན་ སྡེ་ཁྲི་ལས་ཕབ་བཏང་ཡོདཔ་ཨིན་མས། དཔོན་སློབ་རྡོ་རྗེ་ནོར་བུ་ སྡེ་ཁྲི་ལུ་རང་ཐག་རང་བཅད་ཐོག་བྱོན་ཡོདཔ་དང་ རྫོང་དཔོན་ཁོ་ར་ གཟིམ་དཔོན་དང་རྫོང་དཔོན་གྱི་ཕྱག་འགན་གཉིས་སྦེ་བཞེས་བཞུགས་ནུག།</big>
+
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་སྐོར། 	 ====
+<big>སྤ་རོ་དཔོན་སློབ་བགྲེསཔ་ཨ་རྒས་ཧཱཔ་དང་ བླམ་ཁྲི་པ་ཡོན་ཏན་རིན་ཆེན་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་ཐོན་ཏེ་ ནང་འགྲིག་ཀྱི་དོན་ལུ་ སྡེ་སྲིད་དབང་ཕྱུག་གི་སྐུ་མདུན་ལུ་ལྷོདཔ་ད་ སྡེ་སྲིད་མཆོག་གིས་ བླམ་ཁྲི་པའི་རྒྱབ་ལས་ཐོནམ་ལས་བརྟེན་ ཨ་རྒས་ཧཱཔ་གིས་མ་རངས་པར་ སྡེ་སྲིད་མཆོག་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ཁ་ར་བཀྲོངས་ད་ནུག། དེའི་སྐབས་ སྡེ་སྲིད་ཀྱི་རྒྱབ་ལས་ དབང་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་ཐོན་ཏེ་ དཔོན་སློབ་བགྲེསཔ་ཨ་རྒས་ཧཱཔ་གི་དམག་དཔུང་དང་ ནང་འཁྲུག་ཤུགས་ལངས་ཏེ་སྡོདཔ་ད་ དགེ་འདུན་དམངས་དང་གཞུང་གཉིས་ ཁ་བསྡོམས་ཐོག་ལས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྡེ་ཁྲི་ལུ་མངའ་གསོལ་ཞུཝ་ད་ རྫོང་དཔོན་ལྕགས་པ་སངས་རྒྱས་ཁོ་ར་གིས་ རང་ཐག་རང་གིས་བཅད་ཏེ་ སྡེ་ཁྲི་ལུ་བྱོན་ནུག། <br>
+དབང་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ རང་ཐག་རང་གིས་བཅད་ཐོག་ལས་ སྡེ་ཁྲི་ལུ་བྱོན་མི་ལུ་ དགེ་འདུན་དམངས་དང་ གཞུང་དཔོན་ཁག་ཚུ་གི་ཐུགས་ཁར་མ་བབས་ལས་ ནང་འཁྲུག་ལང་ནི་འབད་བའི་སྐབས་ དཔོན་སློབ་བགྲེསཔ་ ཨ་རྒས་ཧཱཔ་གིས་ ཆོས་རྩེ་དཔོན་སློབ་མཚོ་སྐྱེས་རྡོ་རྗེ་ལས་རྒྱབ་ཞུཝ་ད་ ཀྲོང་གསར་ལས་ དམག་དཔོན་འཇིགས་མེད་རྣམ་རྒྱལ་དང་དུང་དཀརཔོ་རྒྱལ་མཚན་ སྐྱིད་ཚལ་པ་རྡོ་རྗེ་གསུམ་གྱིས་གཙོས་ ལྕགས་པ་སངས་རྒྱས་དང་གཅིག་ཁར་ དམག་འཐབ་ད་ ཀྲོང་གསར་གྱི་དམག་དཔོན་ཚུ་གིས་ ལྕགས་པ་སངས་རྒྱས་ཀྱི་དམག་ལུ་འབད་མ་ཚུགས་པར་ སྡེ་སྲིད་ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་ལས་ དམག་རྒྱབ་ཡང་འཚོལ་དགོཔ་ཐོན་ནུག། དེ་མ་ཚད་ ཀྲོང་གསར་པའི་དམག་དཔོན་ཚུ་ ལོག་འབྱོནམ་ད་ དབང་འདུས་ལས་འབྱོན་མ་ཧུམ་པར་ མགར་ས་ལས་བསྐོར་ཏེ་བྱོན་དགོཔ་ཐོན་སོ་ནུག།<br>
+ལྕགས་པ་སངས་རྒྱས་ སྡེ་ཁྲི་ལུ་བཞུགསཔ་ད་ འབྲུམ་ནད་ཤུགས་ཅན་ཅིག་ར་ཐོན་ཡོདཔ་ལས་ དེ་བསྒང་དཔོན་སློབ་བགྲེསཔ་ཨ་རྒས་ཧཱཔ་གིས་ ལྕགས་པ་སངས་རྒྱས་བཀྲོངས་ནིའི་འཆར་གཞི་བརྩམས་ཏེ་ འབྲུམ་ནད་འཐོབ་མི་ཅིག་ལུ་ གོས་ཆེན་གྱི་གོ་ གཞན་དང་མ་འདྲཝ་ཅིག་གྱོན་བཅུག་ཞིནམ་ལས་ གོས་ཆེན་གྱི་གོ་འདི་ ལྕགས་པ་སངས་རྒྱས་ལུ་ཕུལ་ནུག། གོ་འདི་མཐོངམ་ཅིག་ སེམས་ཆགས་པའི་དབང་གིས་ གོ་ཚད་བཏུབ་མ་བཏུབ་བལྟ་ནི་སྦེ་གྱོནམ་ད་ འབྲུམ་ནད་འབུ་བའི་སྟབས་ཀྱིས་ སྤྱི་ལོ་ ༡༨༥༡ གི་ལོ་ལུ་གཤགས་སོ་ནུག་གོ།</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
