--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -642,6 +642,16 @@
 དབང་རྫོང་པ་ལྕགས་པ་སངས་རྒྱས་ཀྱིས་ རང་ཐག་རང་གིས་བཅད་ཐོག་ལས་ སྡེ་ཁྲི་ལུ་བྱོན་མི་ལུ་ དགེ་འདུན་དམངས་དང་ གཞུང་དཔོན་ཁག་ཚུ་གི་ཐུགས་ཁར་མ་བབས་ལས་ ནང་འཁྲུག་ལང་ནི་འབད་བའི་སྐབས་ དཔོན་སློབ་བགྲེསཔ་ ཨ་རྒས་ཧཱཔ་གིས་ ཆོས་རྩེ་དཔོན་སློབ་མཚོ་སྐྱེས་རྡོ་རྗེ་ལས་རྒྱབ་ཞུཝ་ད་ ཀྲོང་གསར་ལས་ དམག་དཔོན་འཇིགས་མེད་རྣམ་རྒྱལ་དང་དུང་དཀརཔོ་རྒྱལ་མཚན་ སྐྱིད་ཚལ་པ་རྡོ་རྗེ་གསུམ་གྱིས་གཙོས་ ལྕགས་པ་སངས་རྒྱས་དང་གཅིག་ཁར་ དམག་འཐབ་ད་ ཀྲོང་གསར་གྱི་དམག་དཔོན་ཚུ་གིས་ ལྕགས་པ་སངས་རྒྱས་ཀྱི་དམག་ལུ་འབད་མ་ཚུགས་པར་ སྡེ་སྲིད་ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་ལས་ དམག་རྒྱབ་ཡང་འཚོལ་དགོཔ་ཐོན་ནུག། དེ་མ་ཚད་ ཀྲོང་གསར་པའི་དམག་དཔོན་ཚུ་ ལོག་འབྱོནམ་ད་ དབང་འདུས་ལས་འབྱོན་མ་ཧུམ་པར་ མགར་ས་ལས་བསྐོར་ཏེ་བྱོན་དགོཔ་ཐོན་སོ་ནུག།<br>
 ལྕགས་པ་སངས་རྒྱས་ སྡེ་ཁྲི་ལུ་བཞུགསཔ་ད་ འབྲུམ་ནད་ཤུགས་ཅན་ཅིག་ར་ཐོན་ཡོདཔ་ལས་ དེ་བསྒང་དཔོན་སློབ་བགྲེསཔ་ཨ་རྒས་ཧཱཔ་གིས་ ལྕགས་པ་སངས་རྒྱས་བཀྲོངས་ནིའི་འཆར་གཞི་བརྩམས་ཏེ་ འབྲུམ་ནད་འཐོབ་མི་ཅིག་ལུ་ གོས་ཆེན་གྱི་གོ་ གཞན་དང་མ་འདྲཝ་ཅིག་གྱོན་བཅུག་ཞིནམ་ལས་ གོས་ཆེན་གྱི་གོ་འདི་ ལྕགས་པ་སངས་རྒྱས་ལུ་ཕུལ་ནུག། གོ་འདི་མཐོངམ་ཅིག་ སེམས་ཆགས་པའི་དབང་གིས་ གོ་ཚད་བཏུབ་མ་བཏུབ་བལྟ་ནི་སྦེ་གྱོནམ་ད་ འབྲུམ་ནད་འབུ་བའི་སྟབས་ཀྱིས་ སྤྱི་ལོ་ ༡༨༥༡ གི་ལོ་ལུ་གཤགས་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གཉིས་པ་ས་སྐྱོང་མི་དབང་བར་ཅུང་པ་ (དམ་ཆོས་ལྷུན་གྲུབ་) ཀྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་པ། ====
+<big>ས་སྐྱོང་མི་དབང་དམ་ཆོས་ལྷུན་གྲུབ་འདི་ ཐིམ་ཕུག་བར་ཕྱོགས་ལས་སྐུ་འཁྲུངས་ཡོདཔ་ལས་ མཚན་ཡང་བར་ཅུང་པ་ཟེར་གསོལ་ནུག། བར་ཅུང་པ་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་དུས་སྐབས་ལས་ གཞུང་དགེ་འདུན་གྲྭ་ཚང་ལུ་བཞུགས་ཏེ་ བསླབ་བྱ་དམ་ཚིག་དང་སྡོམ་པ་ཚུ་ཞུ་ཡོདཔ་ལས་ མཚན་ཡང་དམ་ཆོས་ལྷུན་གྲུབ་ཟེར་གསོལ་ཏེ་ མཚན་གཉིས་ཆ་ར་དར་ཁྱབ་ཡར་སོ་ནུག། སྡེ་སྲིད་དམ་ཆོས་ལྷུན་གྲུབ་མཆོག་ དགེ་འདུན་གྲྭ་ཚང་ནང་བཞུགས་པའི་སྐབས་ འབྲི་ཀློག་གི་སྐུ་ཡོན་ཚུ་དང་ ཐོས་བསམ་སྒོམ་གསུམ་མཐར་ཕྱིནམ་སྦེ་སྦྱངས་ཏེ་ མཁས་པ་ལུ་གྱུར་ཡོདཔ་ལས་ འདུས་སྡེའི་ལས་མཚན་གྱི་གོ་གནས་བཞེས་གནང་ནུག། འགན་ཁུར་ཚུ་ རིམ་པ་བཞིན་དུ་མཛད་གནངམ་ལས་ རྡོ་རྗེ་སློབ་དཔོན་གྱི་གོ་གནས་ཡང་བཞེས་གནང་པའི་ཤུལ་མ་དགོངས་ཞུ་མཛད་དེ་ རྟ་ལང་ཁ་དགོན་པ་ལུ་ཐུགས་དམ་གནང་སྟེ་བཞུགས་ནུག།<br>
+སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་པ་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་མཆོག་ སྡེ་ཁྲི་ལས་སྤྱི་ལོ་ ༡༨༥༢ ཟླཝ་ ༡༢ པའི་ནང་དགོངས་ཞུ་མཛད་དེ་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ལུ་བྱོན་པའི་ཤུལ་མ་ ཐིམ་ཕུག་རྫོང་དཔོན་ཤེས་རབ་མཐར་ཕྱིན་དང་ དབང་རྫོང་དཔོན་ཀུན་དགའ་དཔལ་ལྡན་ (བསོད་ནམས་སྟོབས་རྒྱས་) ཚུ་ ནང་ཟིང་ལང་བའི་དུས་སྐབས་ལུ་ མཁན་ཆེན་ཁྲི་རབས་ ༣༡ པ་ཡོན་ཏན་རྒྱལ་མཚན་དང་ མཁན་ཆེན་ཁྲི་ཟུར་འཇམ་དཔལ་རྒྱ་མཚོ། ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ། དེ་ལས་ དགེ་འདུན་དམངས་ཀྱིས་ མི་སེར་ཞི་བདེ་འབྱུང་ནིའི་ཐབས་ལུ་ཞལ་མཐུན་གྱི་ཐོག་ལས་ སྤྱི་ལོ་ ༡༨༥༢ ཟླཝ་ ༡༢ པའི་ཚེས་ ༧ ལུ་ རྡོ་རྗེ་སློབ་དཔོན་བགྲེསཔ་དམ་ཆོས་ལྷུན་གྲུབ་ (བར་ཅུང་པ་) འདི་ སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་ཞེ་གཉིས་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་པ། ====
+<big>བྱམས་མགོན་ཡང་སྲིད་གསུམ་པ་ བདུད་འཇོམས་རྡོ་རྗེ་ (འཇམ་དབྱངས་བསྟན་འཛིན་)མཆོག་ སྤྱི་ལོ་ ༡༨༥༢ ཟླཝ་ ༡༢ པའི་ཚེས་ ༨ ལུ་ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུ་གི་རྒྱལ་ཚབ་ བླམ་ཁྲི་པ་བཅུ་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག། སྡེ་སྲིད་འདིའི་སྐབས་ལས་འགོ་བཟུང་སྟེ་ འཇམ་མགོན་ཡང་སྲིད་ བླམ་ཁྲི་པའི་གསར་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནིའི་ལམ་ལུགས་གསརཔ་བཙུགས་གནང་ཡོདཔ་ཨིན་མས། ཧེ་མ་འབད་བ་ཅིན་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་གསུང་སྤྲུང་གཉིས་དང་ སྲས་འཇམ་དཔལ་རྡོ་རྗེ། དེ་ལས་ རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཀྱི་ཡང་སྲིད་ཚུ་ བླམ་ཁྲི་པའི་གསེར་ཁྲི་ཁར་ མངའ་གསོལ་ཞུཝ་ཨིནམ་མ་གཏོགས་ གཞན་ཞུ་གསོལ་མེདཔ་ཨིན་མས།<br>
+སངས་རྒྱས་གཉིས་པ་ གུ་རུ་རིན་པོ་ཆེ་གི་ལུང་བསྟན་དུས་ལུ་བབས་ཏེ་ ཞབས་དྲུང་གི་ཐུགས་སྤྲུལ་བཞི་པ་ འཇིགས་མེད་ནོར་བུ་གིས་ ཨ་ཐང་ལས་མཁའ་འགྲོ་མའི་མཚན་རྟགས་དང་ལྡན་པའི་བུམོ་བདེ་ཆེན་མཚོ་མོ་ གསང་ཡུམ་སྦེ་བཞེས་བཞུགསཔ་ད་ གཞུང་ལྷན་རྒྱས་དང་ ལྷག་པར་དུ་ སྡེ་པ་དམ་ཆོས་ལྷུན་གྲུབ་ཀྱི་ཐུགས་ལུ་མ་བབས་ལས་ ཞབས་དྲུང་མཆོག་ བླམ་ཁྲི་པའི་ཁྲི་ལས་ཕབ་བཏང་ཡོདཔ་མ་ཚད་ གཞུང་གི་ཐོབ་ལམ་ཚུ་ཡང་ ག་ནི་ཡང་མ་ཐོབ་བཟོ་ནུག། དེ་མ་ཚད་ ཞབས་དྲུང་གི་ཕྱག་ཞུ་མི་ དགེ་འདུན་པ་ཞེ་གྲངས་ ༡༥ ལྷག་ཙམ་གྱི་མཚན་འཛིན་ཡང་བཏོགས་བཏང་ཡོདཔ་དང་ ཞབས་དྲུང་གི་ཕ་མའི་ཤུལ་སྐལ་ཚུ་ཡང་གཞུང་བཞེས་མཛད་ཏེ་ ཞབས་དྲུང་མཆོག་ གདན་ས་རྟ་མགོ་ལུ་ཡང་བཞུགས་མ་བཅུག་པས། དེ་ལས་ ཞབས་དྲུང་ཁོ་ར་ སྤ་རོ་སྒོ་རི་ནང་ལུ་བཞུགས་ཡོད་རུང་ འདི་ནང་ཡང་ཐུགས་མ་སྤྲོ་བ་ལུ་བརྟེན་ཏེ་ བོད་ལུ་བྱོན་དགོཔ་བྱུང་ནུག་གོ།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་བར་ཅུང་པ་ (དམ་ཆོས་ལྷུན་གྲུབ་) མཆོག་ སྡེ་ཁྲི་ལུ་བཞུགས་པའི་སྐབས་ ཐིམ་རྫོང་པ་ཨུ་མ་དྷེ་ཝ་དང་ དབང་རྫོང་པ་ཀུན་དགའ་དཔལ་ལྡན་གཉིས་ཀྱི་བར་ན་ སྡེ་སྲིད་གོ་གནས་ཀྱི་སྐོར་ལས་ཧབ་ཐོབ་རྐྱབ་ཏེ་ ནང་འཁྲུག་བྱུང་མི་ལུ་བརྟེན་ཏེ་ འབངས་མི་སེར་ཚུ་ཡང་སྐྱིད་ཏོང་ཏོ་སྦེ་སྡོད་མ་ཚུགསཔ་མ་ཚད་ སྡེ་སྲིད་ཁོ་ར་ཡང་ བདེཝ་སྦེ་བཞུགས་མ་ཚུགསཔ་ལས་ སྤྱི་ལོ་ ༡༨༥༤ གི་ལོ་ལུ་ དགོངས་ཞུ་མཛད་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
