/* སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -652,6 +652,17 @@
 ==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ====
 <big>སྡེ་སྲིད་བར་ཅུང་པ་ (དམ་ཆོས་ལྷུན་གྲུབ་) མཆོག་ སྡེ་ཁྲི་ལུ་བཞུགས་པའི་སྐབས་ ཐིམ་རྫོང་པ་ཨུ་མ་དྷེ་ཝ་དང་ དབང་རྫོང་པ་ཀུན་དགའ་དཔལ་ལྡན་གཉིས་ཀྱི་བར་ན་ སྡེ་སྲིད་གོ་གནས་ཀྱི་སྐོར་ལས་ཧབ་ཐོབ་རྐྱབ་ཏེ་ ནང་འཁྲུག་བྱུང་མི་ལུ་བརྟེན་ཏེ་ འབངས་མི་སེར་ཚུ་ཡང་སྐྱིད་ཏོང་ཏོ་སྦེ་སྡོད་མ་ཚུགསཔ་མ་ཚད་ སྡེ་སྲིད་ཁོ་ར་ཡང་ བདེཝ་སྦེ་བཞུགས་མ་ཚུགསཔ་ལས་ སྤྱི་ལོ་ ༡༨༥༤ གི་ལོ་ལུ་ དགོངས་ཞུ་མཛད་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གསུམ་པ་ས་སྐྱོང་མི་དབང་འཇམ་དབྱངས་བསྟན་འཛིན་གྱི་མཛད་རྣམ། ===
+  
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་པ། ====
+<big>བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ མགར་ས་ལུ་ སྤྱི་ལོ་ ༡༨༣༡ པའི་ལོ་ལུ་ དགོན་ཨ་མོ་རི་མུའི་གདུང་རབས་ལུ་སྐུ་འཁྲུངས་ཡོདཔ་དང་། སེཝ་ལ་ཆོས་རྗེ་བྱམས་མགོན་ངག་དབང་རྒྱལ་མཚན་གྱི་ཡང་སྲིད་གསུམ་པ་ཨིན་མས། སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་དུས་སྐབས་ལས་ བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེའི་ཡང་སྲིད་ལུ་ ངོས་འཛིན་གནང་ཡོདཔ་མ་ཚད་ སྐུ་ཡོན་དང་བསླབ་སྡོམ་ དེ་ལས་ སྨིན་གྲོལ་གྱི་གདམས་ངག་ཚུ་ མཁན་ཆེན་ཁྲི་རབས་ ༢༥ པ་ རྗེ་ཤེས་རབས་རྒྱལ་མཚན་དང་ མཁན་ཆེན་ཁྲི་རབས་ ༢༧ པ་ པདྨ་བཟང་པོ་གཉིས་ལས་གསན་བཞེས་གནང་ནུག། <br>
+སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གཉིས་པ་ རྡོ་རྗེ་སློབ་དཔོན་བགྲེས་པ་བར་ཅུང་པ་དང་ རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་གྱིས་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་བཞི་པ་འཇིགས་མེད་ནོར་བུ་མཆོག་ བླ་མ་ཁྲི་པའི་གོ་གནས་ལས་ཕབ་བཏང་སྟེ་ སྤྱི་ལོ་ ༡༨༥༢ ཟླཝ་ ༡༢ པའི་ཚེས་ ༨ ལུ་ བྱམས་སྤྲུལ་གསུམ་པ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ དགུང་ལོ་ ༢༢ བཞེསཔ་ད་ རྒྱལ་ཚབ་སྦེ་བླམ་ཁྲི་པ་སྦེ་་མངའ་གསོལ་མཛད་ནུག།<br>
+རྗེ་ཡོན་ཏན་རྒྱལ་མཚན་དང་དགེ་འདུན་གྱི་ཚོགས་ཀྱིས་ སྤྱི་ལོ་ ༡༨༥༤ ལུ་སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གཉིས་པ་ བར་ཅུང་པ་(དམ་ཆོས་རྒྱལ་མཚན་) མཆོག་སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་བྱོན་པའི་ཤུལ་ལས་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གསུམ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།</big>
+ 
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ་དང་མཛད་པ་མཐའ་མ། ====
+<big>བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གསུམ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་མི་ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་ཤེས་རབ་མཐར་ཕྱིན་གྱིས་ འདི་ལུ་ངོས་ལེན་འབད་མ་བཏུབ་པར་ནང་འཁྲུག་ལངས་ཏེ་ དབང་རྫོང་པ་ཀུན་དགའ་དཔལ་ལྡན་གྱིས་ བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་གི་ཧོངས་ལས་ཐོན་ཏེ་ ཧེང་སྐལ་ར་ནང་ཟིང་བྱུང་ནུག། དེ་སྦེ་ ནང་འཁྲུག་ལངས་ཏེ་སྡོད་པའི་སྐབས་ལུ་ ཆོས་རྩེ་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཆིངས་འགྲིག་ལེགས་ཤོམ་སྦེ་བཟོ་གནང་སྟེ་ མི་སེར་ཞི་བདེ་བྱུང་བའི་དགའ་ཚོར་ལུ་ ཧེ་མ་གཞུང་ལུ་གདུང་བསམ་ཕྱོགས་ཀྱི་ས་ཁྲལ་ཕུལ་དགོ་མི་འདི་ཕུལ་མ་དགོཔ་སྦེ་བཟོ་གནང་ཡོདཔ་མ་ཚད་ ཤར་རྫོང་དཔོན་ཁག་ཚུ་གཞུང་ལས་མངའ་གསོལ་གནང་སྲོལ་ཡོད་མི་འདི་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱིས་མངའ་གསོལ་གནང་ཆོག་པའི་བཀའ་ ཡིག་ཐོག་ལུ་གནང་ནུག།<br>
+བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྤྱི་ལོ་ ༡༨༥༥ ལུ་ དགུང་ལོ་ ༢༥ བཞེསཔ་ད་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
