/* སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ་དང་མཛད་པ་མཐའ་མ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -663,6 +663,16 @@
 <big>བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གསུམ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་མི་ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་ཤེས་རབ་མཐར་ཕྱིན་གྱིས་ འདི་ལུ་ངོས་ལེན་འབད་མ་བཏུབ་པར་ནང་འཁྲུག་ལངས་ཏེ་ དབང་རྫོང་པ་ཀུན་དགའ་དཔལ་ལྡན་གྱིས་ བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་གི་ཧོངས་ལས་ཐོན་ཏེ་ ཧེང་སྐལ་ར་ནང་ཟིང་བྱུང་ནུག། དེ་སྦེ་ ནང་འཁྲུག་ལངས་ཏེ་སྡོད་པའི་སྐབས་ལུ་ ཆོས་རྩེ་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཆིངས་འགྲིག་ལེགས་ཤོམ་སྦེ་བཟོ་གནང་སྟེ་ མི་སེར་ཞི་བདེ་བྱུང་བའི་དགའ་ཚོར་ལུ་ ཧེ་མ་གཞུང་ལུ་གདུང་བསམ་ཕྱོགས་ཀྱི་ས་ཁྲལ་ཕུལ་དགོ་མི་འདི་ཕུལ་མ་དགོཔ་སྦེ་བཟོ་གནང་ཡོདཔ་མ་ཚད་ ཤར་རྫོང་དཔོན་ཁག་ཚུ་གཞུང་ལས་མངའ་གསོལ་གནང་སྲོལ་ཡོད་མི་འདི་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱིས་མངའ་གསོལ་གནང་ཆོག་པའི་བཀའ་ ཡིག་ཐོག་ལུ་གནང་ནུག།<br>
 བྱམས་སྤྲུལ་འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྤྱི་ལོ་ ༡༨༥༥ ལུ་ དགུང་ལོ་ ༢༥ བཞེསཔ་ད་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་ར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་བཞི་བཅུ་ཞེ་བཞི་པ་དམ་ཆོས་ལྷུན་གྲུབ་ཀྱི་མཛད་རྣམ། ===
+<big>སྤྱི་ལོ་ ༡༨༥༢ ཀྱི་ལོ་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གཉིས་པའི་ཁྲི་ཐོག་ལུ་བྱོན་ཏེ་བཞུགས་པའི་སྐབས་ སྡེ་ཁྲིའི་སྐོར་ལས་ དབང་རྫོངཔ་ཀུན་དགའ་དཔལ་ལྡན་དང་ ཐིམ་རྫོངཔ་ཨུ་མ་དྷེ་བ་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་འབྱུང་ས་ལུ་བལྟ་སྟེ་ཐུགས་སྐྱིད་ཏོང་ཏོ་ཅིག་མ་བྱུངམ་ལས་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་བཞུགས་ནུག།</big> 
+==== སྡེ་ཁྲི་ལུ་བསྐོ་བཞག། ==== 
+			
+<big>ཐིམ་རྫོངཔ་དང་ དབང་རྫོངཔ་གཉིས་ཀྱི་ནང་འཁྲུག་གི་བར་ན་ དགེ་འདུན་པའི་སྡེ་ཚུ་གིས་ལགཔ་རྐྱབ་སྟེ་ བླ་མ་ཁྲི་པའི་ཁྲི་ལུ་བཞུགས་ཡོད་མི་ བྱམས་མགོན་སྐུ་འཕྲེང་གསུམ་པ་ འཇམ་དབྱངས་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་གསུམ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུཝ་ད་ དབང་རྫོངཔ་ཀུན་དགའ་དཔལ་ལྡན་ལུ་བཏུབ་རུང་ ཐིམ་རྫོངཔ་ཨུ་མ་དྷེ་བ་ལུ་མ་བཏུབ་པར་ ནང་འཁྲུག་ལོངམ་ལོང་ས་ར་སྡོད་ནུག། དེའི་སྐབས་ ཐིམ་རྫོངཔ་གིས་ ཆོས་རྩེ་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་ལས་དམག་རྒྱབ་ལེནམ་ད་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་གནས་སྟངས་དང་དམག་འཁྲུག་དེ་ཞི་ཐབས་ལུ་ ཐབས་ཤེས་བཏོན་ཏེ་ ཐིམ་རྫོང་པའི་རེ་འདོད་བསྐང་ནིའི་དོན་ལུ་ སྡེ་སྲིད་ཁྲི་ཟུར་བར་ཅུང་དམ་ཆོས་ལྷུན་གྲུབ་ཡང་ བྱམས་མགོན་སྤྲུལ་སྐུ་དང་སྡེ་སྲིད་ཟུང་འབྲེལ་སྦེ་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བཞི་པའི་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་པ། ==== 
+			
+<big>ཐིམ་རྫོངཔ་དང་ དབང་རྫོངཔ་གཉིས་ཆ་ར་གི་རེ་བ་སྐང་ཐབས་ལུ་ བྱམས་མགོན་སྤྲུལ་སྐུ་དང་སྡེ་སྲིད་ཟུང་འབྲེལ་སྦེ་བསྐོ་བཞག་མཛད་པའི་ཤུལ་ལས་ ནང་འཁྲུག་དང་ནང་ཟིང་ག་ནི་ཡང་མེད་པར་ སྐབས་ཅིག་རྒྱལ་ཁབ་འདི་ནང་སྐྱིད་ཏོང་ཏོ་ཡོདཔ་ལས་ སྡེ་སྲིད་གཉིས་ཀྱིས་ཡང་ རང་ལུ་ཕོག་པའི་ཕྱག་འགན་འབག་སྟེ་བཞུགས་ནུག། ཨིན་རུང་ སྤྱི་ལོ་ ༡༨༥༥ གི་ལོ་ལུ་ བྱམས་མགོན་སྤྲུལ་སྐུ་མཆོག་ སྤུ་ན་ཁ་ལུ་བཞུགསཔ་ད་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ཁ་ར་དགོངས་པ་རྫོགས་སོཔ་ལས་ སྡེ་སྲིད་དམ་ཆོས་ལྷུན་གྲུབ་ཡང་ ནང་འཁྲུག་འབྱུང་འོང་མནོ་བའི་ཐུགས་བཞེད་གནང་སྟེ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ ཁོ་རའི་གདན་ས་ སྤ་རོ་སྐྱིད་ལ་མགོན་པ་ལུ་བྱོན་བཞུགས་ནུག་གོ།།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
