--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -673,6 +673,19 @@
 <big>ཐིམ་རྫོངཔ་དང་ དབང་རྫོངཔ་གཉིས་ཆ་ར་གི་རེ་བ་སྐང་ཐབས་ལུ་ བྱམས་མགོན་སྤྲུལ་སྐུ་དང་སྡེ་སྲིད་ཟུང་འབྲེལ་སྦེ་བསྐོ་བཞག་མཛད་པའི་ཤུལ་ལས་ ནང་འཁྲུག་དང་ནང་ཟིང་ག་ནི་ཡང་མེད་པར་ སྐབས་ཅིག་རྒྱལ་ཁབ་འདི་ནང་སྐྱིད་ཏོང་ཏོ་ཡོདཔ་ལས་ སྡེ་སྲིད་གཉིས་ཀྱིས་ཡང་ རང་ལུ་ཕོག་པའི་ཕྱག་འགན་འབག་སྟེ་བཞུགས་ནུག། ཨིན་རུང་ སྤྱི་ལོ་ ༡༨༥༥ གི་ལོ་ལུ་ བྱམས་མགོན་སྤྲུལ་སྐུ་མཆོག་ སྤུ་ན་ཁ་ལུ་བཞུགསཔ་ད་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ཁ་ར་དགོངས་པ་རྫོགས་སོཔ་ལས་ སྡེ་སྲིད་དམ་ཆོས་ལྷུན་གྲུབ་ཡང་ ནང་འཁྲུག་འབྱུང་འོང་མནོ་བའི་ཐུགས་བཞེད་གནང་སྟེ་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ ཁོ་རའི་གདན་ས་ སྤ་རོ་སྐྱིད་ལ་མགོན་པ་ལུ་བྱོན་བཞུགས་ནུག་གོ།།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཞེ་ལྔ་པ་ ཀུན་དགའ་དཔལ་ལྡན་ ༼ཆོས་རྒྱལ་བསོད་ནམས་སྟོབས་རྒྱས།༽ ===
+==== སྡེ་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ==== 
+		
+<big>སྡེ་སྲིད་མཆོག་དབང་རྫོང་ཆ་འོག་ ཤར་དར་བརྒྱད་ཀྱི་ནང་གསེས་ སྦེད་ནག་ལུ་འཁྲུངས་ཡོདཔ་དང་ མཚན་ལུ་ཀུན་དགའ་དཔལ་ལྡན་ཟེར་གསོལ་ཡོདཔ་ཨིན་པས། སྐུ་ན་ཆུང་ཀུ་ཅིག་ལས་ར་ འབོད་སྒར་པའི་གྲལ་ཁར་བཅའ་མར་གཏོགས་ཏེ་ སྲིད་ཀྱི་ལམ་ལུགས་དང་སྒྲིག་ལམ་ཚུ་མཐར་ཕྱིནམ་སྦེ་སྦྱངས་ཡོདཔ་མ་ཚད་ ཁོ་གི་རྨག་སྐུད་ལྕགས་པ་སངས་རྒྱས་སྡེ་ཁྲི་ལུ་འབྱོནམ་ད་ ཀུན་དགའ་དཔལ་ལྡན་ཁོ་ར་ དབང་རྫོང་པའི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་ལུ་བསྐོ་བཞག་འབད་ཡོད་པའི་མཛད་རྣམ། 	 ====
+	
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཞེ་བཞི་པ་དམ་ཆོས་ལྷུན་གྲུབ་མཆོག་ སྤྱི་ལོ་ ༡༨༥༥ གི་ལོ་ལུ་ སྡེ་པའི་ཁྲི་ཐོག་ལུ་དགོངས་པ་རྫོགས་པའི་ཤུལ་ དབང་རྫོངཔ་ཀུན་དགའ་དཔལ་ལྡན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཞེ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་མཛད་གནང་ཡོདཔ་དང་ མཚན་ལུ་ཡང་ ཆོས་རྒྱལ་བསོད་ནམས་སྟོབས་རྒྱས་ཟེར་གསོལ་གནང་ནུག། དབང་རྫོངཔ་ཀུན་དགའ་དཔལ་ལྡན་མཆོག་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ ཁྲི་མངའ་གསོལ་ཞུཝ་དང་དུས་མཉམ་སྦེ་ ཐིམ་ཕུག་བཀྲི་ཤིས་ཆོས་རྫོང་ནང་ལུ་ ཐིམ་རྫོངཔ་ཨུ་མ་དྷེ་བ་ (ཤེས་རབ་མཐར་ཕྱིན་) གིས་ ཐག་རང་བཅད་ཀྱི་ཐོག་ལས་ སྡེ་ཁྲི་ལུ་བྱོན་ཡོདཔ་ལས་ སྡེ་སྲིད་གཉིས་སྦེ་སྐྱོང་དགོཔ་ཐོན་སོ་ནུག། དེའི་བསྒང་ དགེ་འདུན་དམངས་དང་ལྷན་རྒྱས་འདུས་ཚོགས་ཀྱིས་ སྡེ་སྲིད་གཉིས་མཉམ་འབྲེལ་གྱི་ཐོག་ལས་ ཕྱག་ལག་གནང་དགོཔ་སྦེ་ཞུ་བ་ཕུལཝ་དང་གཅིག་ཁར་ གསོལ་ཐབ་ཡང་ སྔར་ག་ཨིནམ་སྦེ་བཞུགས་དགོཔ་པའི་ཞུ་བ་ཕུལ་མི་ལུ་ སྡེ་སྲིད་གཉིས་ཀྱིས་ཡང་ ངོས་ལེན་མཛད་གནང་ནུག། ཨིན་རུང་ སྤྱི་ལོ་ ༡༨༥༧ གྱི་ལོ་ལུ་ གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་བཞུགསཔ་ད་ སྡེ་སྲིད་བསོད་ནམས་སྟོབས་རྒྱས་ཀྱིས་ གོང་གཟིམ་གྲྭ་ཅུང་ལུ་བརྒྱུད་སྐུལ་རྐྱབ་སྟེ་ སྡེ་པ་ཤེས་རབ་མཐར་ཕྱིན་བཀྲོངས་ད་ནུག། དེའི་ཤུལ་ལས་ སྡེ་པ་བསོད་ནམས་སྟོབས་རྒྱས་དང་ མགྲན་ཟླ་འབད་ཚུགས་མི་ག་ཡང་མ་ཐོནམ་མ་ཚད་ རྒྱལ་ཁབ་ཡང་སྐབས་ཅིག་ཞི་བདེ་གི་ངང་ལུ་སྐྱོང་ནུག།</big>
+==== ཀྲོང་གསར་དཔོན་སློབ་གསར་བགྲེས་གཉིས་ཀྱི་བར་ན་ནང་འགྲིག། ==== 
+			
+<big>ཧེ་མ་ ཆོས་རྩེ་དཔོན་སློབ་མཚོ་སྐྱེས་རྡོ་རྗེ་ ཆོས་རྩེ་དཔོན་སློབ་ལས་དགོངས་ཞུ་མཛད་པའི་སྐབས་ ཁྲི་པ་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ཁྲི་ཐོག་ལོ་གསུམ་བཞུགས་དགོཔ་དང་ འཇིགས་མེད་རྣམ་རྒྱལ་ཁོ་ར་དགོངས་ཞུ་མཛདཔ་ད་ མཚོ་སྐྱེས་རྡོ་རྗེའི་སྲས་ བཙན་འགྲུས་རྒྱལ་མཚན་བསྐོ་བཞག་མཛད་དགོཔ་སྦེ་ཁ་ཆེམས་ཡོད་རུང་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་དགོངས་ཞུ་མཛད་མ་བཏུབ་ལས་ ཆོས་རྩེ་དཔོན་སློབ་བགྲེསཔ་མཚོ་སྐྱེས་རྡོ་རྗེ་དང་འཇིགས་མེད་རྣམ་རྒྱལ་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་བྱུང་ནུག། དེའི་སྐབས་ མཚོ་སྐྱེས་རྡོ་རྗེ་གི་སྲས་ བྱ་རྫོངཔ་བརྩོན་འགྲུས་རྒྱལ་མཚན་གྱིས་ དམག་རྒྱབ་སྡེ་སྲིད་བསོད་ནམས་སྟོབས་རྒྱས་ལས་ཞུཝ་ད་ སྡེ་སྲིད་དམག་རྒྱབ་སྦེ་མེན་པར་ ཆོས་རྩེ་དཔོན་སློབ་གསར་བགྲེས་གཉིས་ཀྱི་བར་ན་ ནང་འགྲིག་རྐྱབ་མི་སྦེ་བྱོན་ནུག། སྡེ་ཚན་དེ་གཉིས་ཀྱི་བར་ན་ ནང་འགྲིག་བཟོ་བའི་སྐབས་ལུ་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་གོ་གནས་ལས་དགོངས་ཞུ་མཛད་མ་བཏུབ་ལས་ བྱ་རྫོང་པའི་གོ་གནས་ཡར་སེང་མཛད་དེ་ བྱ་དཀར་དཔོན་སློབ་ལུ་བསྐོ་བཞག་མཛད་གནང་ཡོདཔ་དང་ ཆོས་རྩེ་དཔོན་སློབ་གཉིས་ཀྱི་བར་ན་ ནང་འཁྲུག་ལོག་སྟེ་མི་འཐོན་ནིའི་དོན་ལུ་ སྡེ་སྲིད་མཆོག་གིས་ ས་ཁོངས་ཚུ་ཡང་ འདྲན་འདྲ་སྦེ་བགོ་བཤའ་མཛད་དེ་ ནང་འཁྲུག་དེ་ཡང་དེ་ཅིག་སྦེ་མཇུག་བསྡུ་གནང་ནུག།</big>
+==== དགོངས་པ་རྫོགས་པའི་སྐོར། ==== 
+<big>སྡེ་སྲིད་མཆོག་ སྤྱི་ལོ་ ༡༨༦༡ གི་ལོ་ལུ་ གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་པའི་ཤུལ་ལུ་ ནད་གཞི་དྲག་པོ་ཅིག་ཟུན་ཏེ་ དྲག་ར་མ་བཏུབ་ལས་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་དེ་ ཡུན་མ་རིངམོ་ཅིག་གི་ཤུལ་ལས་ར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
